version 1.1.1 ;add vr camera ;optimize UI